# UnClean3D

./: .gitattributes  .gitmodules  CMakeLists.txt  LICENSE  createClass.sh
Assets/: BrickWall.fx  Bunny.fx  CreateDirtShader.bushader  DresserEffect.fx  MyEffect.fx  MyTable.fx  SimplexNoise3D.glsl  ViewShader.bushader  armadillo.fx  armadilloRust.fx  bunnyRust.fx  chains_1.fx  chains_2.fx  column.fx  cube.dae  longBench.fx  mec.fx  stool.fx  tableCristina.fx  wall.fx
Assets/Models/: armadillo.ply  bunny.ply  column.dae  cube.dae  dragon.ply  dwarf.ply  dwarf_twice_res.ply  longBench.dae  streetLamp.ply  wall.dae
Assets/MyTable/: MyTable.blend  MyTable.blend1  MyTable.dae  offsetsTest.blend
Assets/Shaders/: ArrayOfArrays.glsl  BrushPreview.bushader  CompositeLayers.bushader  CompositeLayers.glsl  GenerateEffectMaskTextureAmbientOcclusion.bushader  GenerateEffectMaskTextureBlur.bushader  GenerateEffectMaskTextureCellsNoise.bushader  GenerateEffectMaskTextureCracksNoise.bushader  GenerateEffectMaskTextureEdges.bushader  GenerateEffectMaskTextureFractal.bushader  GenerateEffectMaskTextureNormal.bushader  GenerateEffectMaskTexturePolkaDotsNoise.bushader  GenerateEffectTexture.bushader  (+19 more)
QtProject/: .files  .includes
Thesis/: .~lock.FMT.odt#  .~lock.FMT.pdf#  .~lock.FMTBeforeRemovingApproachOverview.odt#  FMT.docx  FMT.odt  PerformanceTests.ods  RaytraceTimes.ods
src/: BrushInspectorWidget.cpp  BrushInspectorWidget.h  Clipboard.cpp  Clipboard.h  ControlPanel.cpp  ControlPanel.h  Dirter.cpp  Dirter.h  EditScene.cpp  EditScene.h  EffectLayer.cpp  EffectLayer.h  EffectLayerAmbientOcclusion.cpp  EffectLayerAmbientOcclusion.h  EffectLayerAmbientOcclusionGPU.cpp  EffectLayerAmbientOcclusionGPU.h  EffectLayerCompositer.cpp  EffectLayerCompositer.h  EffectLayerDirt.cpp  EffectLayerDirt.h  EffectLayerFractalBumps.cpp  EffectLayerFractalBumps.h  EffectLayerImplementation.cpp  EffectLayerImplementation.h  EffectLayerImplementationCPU.cpp  EffectLayerImplementationCPU.h  EffectLayerImplementationGPU.cpp  EffectLayerImplementationGPU.h  EffectLayerMask.cpp  EffectLayerMask.h  EffectLayerMaskImplementation.cpp  EffectLayerMaskImplementation.h  EffectLayerMaskImplementationAmbientOcclusion.cpp  EffectLayerMaskImplementationAmbientOcclusion.h  EffectLayerMaskImplementationBlur.cpp  EffectLayerMaskImplementationBlur.h  EffectLayerMaskImplementationBrush.cpp  EffectLayerMaskImplementationBrush.h  EffectLayerMaskImplementationCPU.cpp  EffectLayerMaskImplementationCPU.h  (+58 more)
(+18 files in other folders)
